syntax = "proto3";

package post;

option go_package = "posts_service/pkg/pb";

import "google/protobuf/empty.proto";

message PostID {
  uint64 id = 1;
}

message PostIdAuthor {
  uint64 id = 1;
  string author = 2;
}

message Post {
  uint64 id = 1;
  string author = 2;
  string date_of_creation = 3;
  string content = 4;
  uint64 comment_section_id = 5;
}

message PostInfo {
  string author = 1;
  string date_of_creation = 2;
  string content = 3;
  uint64 comment_section_id = 4;
}

message PaginationInfo {
  uint64 page_number = 1;
  uint32 batch_size = 2;
}

message PostList {
  repeated Post posts = 1;
}

service PostService  {
  rpc NewPost(PostInfo) returns (PostID) {};
  rpc UpdatePost(PostInfo) returns (google.protobuf.Empty) {};
  rpc DeletePost(PostIdAuthor) returns (google.protobuf.Empty) {};
  rpc GetPost(PostID) returns (Post) {};

  rpc GetPosts(PaginationInfo) returns (PostList) {};
}

